Exclude all appsettings.json files except template from publish directory

--- a/src/my-masternode-setup.csproj
+++ b/src/my-masternode-setup.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings*.json" CopyToPublishDirectory="Never" />
+    <Content Update="appsettings.template.json" CopyToPublishDirectory="Always" />
+  </ItemGroup>
+
 </Project>
