--- a/src/appsettings.template.json
+++ b/src/appsettings.template.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Database": {
+    "ConnectionString": "mongodb+srv://<username>:<password>@<domain>/",
+    "DatabaseName": "databaseName"
+  }
 }
